Table team_stats {
  ts_id integer [pk]
  ts_season text [pk]
  ts_wins integer
  ts_losses integer
  ts_pts real
  ts_fgm real
  ts_3ptm real
  ts_ftm real
  ts_reb real
  ts_ast real
  ts_tov real
  ts_stl real
  ts_blck real
  ts_pf real
  ts_pfd real
}

Table team {
  t_id integer [pk]
  t_name text
}

Table player {
  p_id integer [pk]
  p_name text
  p_position text
  p_yearstart integer
  p_yearend integer
  p_height text
  p_weight integer
  p_birthdate text
  p_college text
}

Table player_stats {
  ps_id integer [pk]
  ps_teamid integer [pk]
  ps_season integer [pk]
  ps_pos text
  ps_games integer
  ps_pts integer
  ps_fg integer
  ps_3ptm integer
  ps_2ptm integer
  ps_ftm integer
  ps_reb integer
  ps_ast integer
  ps_tov integer
  ps_stl integer
  ps_blck integer
}

Ref: team.t_id - team_stats.ts_id
Ref: team_stats.ts_id - player_stats.ps_teamid
Ref: player_stats.ps_id - player.p_id
Ref: player_stats.ps_season - team_stats.ts_season
